# stock-market-service

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
api/: CMakeLists.txt  stock.grpc.pb.cc  stock.grpc.pb.h  stock.pb.cc  stock.pb.h  stockmarket.grpc.pb.cc  stockmarket.grpc.pb.h  stockmarket.pb.cc  stockmarket.pb.h
api/common/: types.pb.cc  types.pb.h
api/proto/: stockmarket.proto
api/service/: security.grpc.pb.cc
config/: local.json
grpc-contract/common/: types.grpc.pb.cc  types.grpc.pb.h
grpc-contract/proto/common/: types.proto
grpc-contract/proto/service/: exchange.proto  security.proto
grpc-contract/service/: exchange.grpc.pb.cc  exchange.grpc.pb.h  exchange.pb.cc  exchange.pb.h  security.grpc.pb.h  security.pb.cc  security.pb.h
postgresdb/local-docker/: compose.yaml
postgresdb/local-docker/api/: compose.yaml
postgresdb/local-docker/market-engine/: compose.yaml
postgresdb/scripts/: init.sql
postgresdb/scripts/data/: securities_init.csv
postgresdb/scripts/sql/: init.sql
proto/: stock.proto
src/: main.cpp
src/api/: CMakeLists.txt  main.cpp
src/api/config/: local.json  server_config.h
src/api/model/config/: server_config.h
src/api/server/: server.cpp  server.h
src/api/services/: exchange_service.cpp  exchange_service.h  security_service.cpp  security_service.h
src/api_service/: exchange_service.cpp  exchange_service.h  security_service.cpp  security_service.h
src/apiservice/: exchange_service.cpp  exchange_service.h  security_service.cpp  security_service.h  stock_market.cpp  stock_market.h
src/cli/: CMakeLists.txt  main.cpp
src/cli/client/: exchange_client.h
src/common/: CMakeLists.txt
src/common/config/: config_file_not_found_exception.cpp  config_loader_exception.cpp  loader.cpp
src/common/include/common/config/: config_file_not_found_exception.h  config_loader.h  config_loader_exception.h  loader.h
src/common/include/common/util/: util.h
src/common/util/: util.cpp
src/dal/: CMakeLists.txt  exchange.cpp  exchange.h  exchange_dao.cpp  exchange_dao.h  security_dao.h
src/dal/dao/: exchange_dao.cpp  exchange_dao.h  security_dao.cpp  security_dao.h
src/dal/exceptions/: entity_not_found_exception.cpp  entity_not_found_exception.h
src/dal/include/dal/config/: db_config.h
src/dal/include/dal/connection/: postgres_data_store.h
src/dal/include/dal/dao/: exchange_dao.h  security_dao.h
src/dal/include/dal/exceptions/: entity_not_found_exception.h
src/dal/include/dal/models/: exchange.h  security.h
src/dal/include/dal/models/config/: db_config.h
src/dal/include/dao/: exchange_dao.h  security_dao.h
src/dal/include/exceptions/: entity_not_found_exception.h
src/dal/include/models/: exchange.h  security.h
src/dal/models/: exchange.cpp  exchange.h  security.cpp  security.h
src/dal/store/: connection_handler_internal.h  postgres_data_store.cpp
src/db/: postgres_client.cpp  postgres_client.h
src/market-engine/: main.cpp
src/server/: api_server.cpp  api_server.h
src/service/: stock_market.cpp  stock_market.h
